# confighole

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  renovate.json
.github/workflows/: docker-build.yml  lint.yml  test.yml
confighole/: __init__.py  cli.py
confighole/core/: __init__.py  client.py  daemon.py
confighole/utils/: __init__.py  config.py  constants.py  diff.py  exceptions.py  helpers.py  tasks.py
examples/: config.yaml  docker-compose.yaml
examples/kubernetes/: configmap.yaml  deployment.yaml  secret.yaml
tests/: __init__.py  conftest.py  constants.py  test_cli_integration.py  test_cli_unit.py  test_client_integration.py  test_client_unit.py  test_config_integration.py  test_daemon_integration.py  test_daemon_unit.py  test_error_conditions.py  test_integration.py  test_tasks_integration.py  test_utils_unit.py
tests/assets/: pihole-docker-compose.yml  test_config.yaml
