[tool.poetry]
name = "confighole"
version = "1.0.0"
description = "Pi-hole configuration as code"
authors = ["dsgnr"]
readme = "README.md"
homepage = "https://github.com/dsgnr/confighole"
repository = "https://github.com/dsgnr/confighole"
documentation = "https://github.com/dsgnr/confighole"
keywords = ["pihole", "dns", "configuration", "management"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Systems Administration",
]
packages = [{include = "confighole"}]

[tool.poetry.dependencies]
python = "^3.13"
pihole-lib = {git = "https://github.com/dsgnr/pihole-lib.git"}
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
mypy = "^1.7.0"
types-pyyaml = "^6.0.0"

[tool.poetry.scripts]
confighole = "confighole.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"  # Use py312 until ruff supports py313
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["confighole"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "pihole_lib.*"
ignore_missing_imports = true